Fixed overflow and console error Overflow is hidden at the correct place. The footer has no longer a margin top, it's instead at the bottom of the app as padding. Removed annoying console error preventing execution of setPlayerVolume from the observer before time

--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,12 @@ html {
     flex-direction: column;
     background-color: #eee;
     background-image: url('/img/bg.png');
-    overflow: hidden;
     transition: all .4s ease-in-out;
 }
 
 /* FOOTER */
 footer{
     background-color: #252525;
-    margin-top: 25px;
 }
 #footer-container {
     height: 100%;
